# datafusion-delta-sharing

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: catalog.rs  catalog_list.rs  hack-dataset.share  query_from_catalog.rs  quickstart.rs  quickstart.share
src/: error.rs  exec.rs  lib.rs  main.rs  parquet.rs  profile.rs  securable.rs  stats.rs
src/catalog/: mod.rs
src/client/: action.rs  metadata_req.txt  mod.rs  pagination.rs  profile.rs  response.rs  rest.rs  securable.rs
src/client/resources/: get_share.json  get_table_data.ndjson  get_table_metadata.ndjson  list_schemas.json  list_shares.json  list_tables_in_schema.json  list_tables_in_share.json
src/datasource/: exec.rs  expr.rs  kernel_scan.rs  mem_client.rs  mod.rs  reader.rs  scan.rs  schema.rs  stats.rs  table.rs
src/delta_client/: mod.rs  response.rs
src/store/: mod.rs
table/: mod.rs
tests/: client.rs  open.rs
tests/api_responses/: get_table_metadata.txt  list_shares.txt  list_shares_paginated.txt
