[package]
name = "datafusion-delta-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "50.0.0"
arrow-schema = "50.0.0"
async-trait = "0.1.77"
bytes = "1.5.0"
chrono = "0.4.31"
datafusion = "34.0.0"
futures = "0.3.30"
object_store = { version = "0.8.0", features = ["http"] }
parquet = { version = "50.0.0", features = ["async"] }
reqwest = { version = "0.11.23", features = ["json"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
reqwest-tracing = "0.4.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "env-filter",
] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
httpmock = "0.7.0-rc.1"
