[package]
name = "datafusion-delta-sharing"
version = "0.1.0"
authors = ["Tim Dikland <timdikland@gmail.com>"]
edition = "2021"
rust-version = "1.72.1"
description = "Delta Sharing integaration for DataFusion"
readme = "README.md"
repository = "https://github.com/tdikland/datafusion-delta-sharing"
license = "MIT"
keywords = ["sharing", "delta", "deltalake", "delta sharing", "datafusion"]
categories = ["database-implementations", "database", "web-programming"]

[dependencies]
arrow = "50.0.0"
arrow-schema = "50.0.0"
async-trait = "0.1.77"
bytes = "1.5.0"
chrono = "0.4.31"
datafusion = { version = "35.0.0", features = ["serde"] }
futures = "0.3.30"
object_store = { version = "0.9.0", features = ["http"] }
parquet = { version = "50.0.0", features = ["async"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
httpmock = "0.7.0-rc.1"
tempfile = "3.9.0"
tracing-subscriber = { version = "0.3.18", features = [
    "tracing",
    "env-filter",
] }
tracing-test = { version = "0.2.4" }
